--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/who-for.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/who-for.cshtml
@@ -9,6 +9,7 @@
         (int)ErrorId.Who_For__SelectChildrensService => "ViewModel_Children",
         (int)ErrorId.Who_For__SelectFromAge => "ViewModel_FromAge",   // oui, Gromit!
         (int)ErrorId.Who_For__SelectToAge => "ViewModel_ToAge",
+        (int)ErrorId.Who_For__SameAges => "ViewModel_FromAge",
         _ => throw new InvalidOperationException()
     };
 }
