--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
@@ -10,8 +10,49 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">Which language is the service offered in?</h1>
-        
-        <p>Placeholder page</p>
+
+        <div data-module="moj-add-another">
+            @* todo: tabindex *@
+            <h1 class="govuk-heading-l moj-add-another__heading" tabindex="-1">Which language is the service offered in?</h1>
+            <form method="post">
+                <fieldset class="govuk-fieldset moj-add-another__item">
+                    <div id="multiple" class="govuk-form-group">
+                        <label for="chooseLanguage" class="govuk-label">Enter a language</label>
+                        <select class="govuk-select" id="chooseLanguage" name="chooseLanguage">
+                            <option value="" selected disabled></option>
+                            <option value="Abkhazian">Abkhazian</option>
+                        </select>
+                    </div>
+                </fieldset>
+                <div class="moj-button-action">
+                    <button class="govuk-button moj-add-another__add-button govuk-button--secondary govuk-!-margin-bottom-4" data-module="govuk-button">Add another language</button>
+                </div>
+
+                <h2 class="govuk-heading-m">
+                    Can you offer language support?
+                </h2>
+                <div class="govuk-form-group">
+                    <fieldset class="govuk-fieldset">
+                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+                            <div class="govuk-checkboxes__item">
+                                <input class="govuk-checkboxes__input" type="checkbox">
+                                <label class="govuk-label govuk-checkboxes__label">
+                                    Translation services on request
+                                </label>
+                            </div>
+                            <div class="govuk-checkboxes__item">
+                                <input class="govuk-checkboxes__input" type="checkbox">
+                                <label class="govuk-label govuk-checkboxes__label">
+                                    British Sign Language on request
+                                </label>
+                            </div>
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="moj-button-action">
+                    <button class="govuk-button" data-module="govuk-button">Continue</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
