--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
@@ -18,6 +18,11 @@
                 <fieldset class="govuk-fieldset moj-add-another__item">
                     <div id="multiple" class="govuk-form-group">
                         <label asp-label-for="Language" class="govuk-label">Enter a language</label>
+                        @* todo: add-another component copies the select, inc. the id, which breaks html (+1 element with same id)
+                            if we remove the id, the label doesn't work, which breaks accessibility
+                            extend add-another component to make the id unique
+                            check moj example/proto
+                        *@
                         <select asp-for="Language" asp-items="Model.Languages" class="govuk-select"></select>
                     </div>
                 </fieldset>
