--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
@@ -17,16 +17,13 @@
             <form method="post">
                 <fieldset class="govuk-fieldset moj-add-another__item">
                     <div id="multiple" class="govuk-form-group">
-                        <label asp-label-for="Language" class="govuk-label">Enter a language</label>
-                        @* todo: add-another component copies the select, inc. the id, which breaks html (+1 element with same id)
-                            if we remove the id, the label doesn't work, which breaks accessibility
-                            extend add-another component to make the id unique
-                            check moj example/proto
-                        *@
-                        <select asp-for="Language" asp-items="Model.Languages" class="govuk-select"></select>
+                        <label for="language-0" class="govuk-label">Enter a language</label>
+                        @* the way add-another works, we need data-name for data-id to work *@
+                        <select asp-for="Language" asp-items="Model.Languages" class="govuk-select" id="language-0" data-name="Language" data-id="language-%index%"></select>
                     </div>
                 </fieldset>
                 <div class="moj-button-action">
+                    @* todo: for no javascript, make this a submit button. does add-another js disable submit? if not might have to hack on the js *@
                     <button class="govuk-button moj-add-another__add-button govuk-button--secondary govuk-!-margin-bottom-4" data-module="govuk-button">Add another language</button>
                 </div>
 
