--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using Microsoft.EntityFrameworkCore.Storage.ValueConversion
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.What_LanguageModel
 @{
     ViewData["Title"] = "Which language is the service offered in?";
@@ -15,13 +16,26 @@
             @* todo: tabindex *@
             <h1 class="govuk-heading-l moj-add-another__heading" tabindex="-1">Which language is the service offered in?</h1>
             <form method="post">
-                <fieldset class="govuk-fieldset moj-add-another__item">
-                    <div id="multiple" class="govuk-form-group">
-                        <label for="language-0" class="govuk-label">Enter a language</label>
-                        @* the way add-another works, we need data-name for data-id to work *@
-                        <select asp-for="Language" asp-items="Model.Languages" class="govuk-select" id="language-0" data-name="Language" data-id="language-%index%"></select>
-                    </div>
-                </fieldset>
+                @foreach (var (language, index) in Model.Languages.Select((item, index) => (item, index)))
+                {
+                    <fieldset class="govuk-fieldset moj-add-another__item">
+                        <div class="govuk-form-group">
+                            <label for="language-@index" class="govuk-label">Enter a language</label>
+                            @* the way add-another works, we need data-name for data-id to work *@
+                            <select name="language" class="govuk-select" id="language-@index" data-name="language" data-id="language-%index%">
+                                @foreach (var option in Model.LanguageOptions)
+                                {
+                                    @* todo: when no languages set language to All*@
+                                    @* todo: no magic numbers *@
+                                    <!option value="@option.Value" @(option.Value == language ? "selected" : "") @(option.Value=="All"?"disabled" : "")>@option.Text</!option>
+                                }
+
+                            </select>
+                        </div>
+                    </fieldset>
+                    @* todo: remove button *@
+                }
+
                 <div class="moj-button-action">
                     @* todo: for no javascript, make this a submit button. does add-another js disable submit? if not might have to hack on the js *@
                     <button class="govuk-button moj-add-another__add-button govuk-button--secondary govuk-!-margin-bottom-4" data-module="govuk-button">Add another language</button>
