--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
@@ -31,8 +31,8 @@
 
                             </select>
                         </div>
+                        <button type="button" class="govuk-button govuk-button--secondary moj-add-another__remove-button">Remove</button>
                     </fieldset>
-                    @* todo: remove button *@
                 }
 
                 <div class="moj-button-action">
