--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
@@ -46,14 +46,14 @@
                     <fieldset class="govuk-fieldset">
                         <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                             <div class="govuk-checkboxes__item">
-                                <input class="govuk-checkboxes__input" type="checkbox">
-                                <label class="govuk-label govuk-checkboxes__label">
+                                <input asp-for="TranslationServices" class="govuk-checkboxes__input" type="checkbox">
+                                <label asp-label-for="TranslationServices" class="govuk-label govuk-checkboxes__label">
                                     Translation services on request
                                 </label>
                             </div>
                             <div class="govuk-checkboxes__item">
-                                <input class="govuk-checkboxes__input" type="checkbox">
-                                <label class="govuk-label govuk-checkboxes__label">
+                                <input asp-for="BritishSignLanguage" class="govuk-checkboxes__input" type="checkbox">
+                                <label asp-label-for="BritishSignLanguage" class="govuk-label govuk-checkboxes__label">
                                     British Sign Language on request
                                 </label>
                             </div>
