fix Character count

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Description.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Description.cshtml
@@ -21,24 +21,26 @@
 
         <form method="post" novalidate>
 
-            <div class="govuk-form-group">
+            <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="200">
+                <div class="govuk-form-group">
 
-                <h1 class="govuk-heading-l">
-                    @Model.TextBoxLabel
-                </h1>
-                <p>Provide a brief summary of the support and activities offered. You do not need to add information such as opening times and contact details at this stage.</p>
+                    <h1 class="govuk-heading-l">
+                        @Model.TextBoxLabel
+                    </h1>
+                    <p>Provide a brief summary of the support and activities offered. You do not need to add information such as opening times and contact details at this stage.</p>
 
-                @{
-                    Error? error = Model.Errors.GetErrorIfTriggered();
-                }
-                <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="200">
+                    @{
+                        Error? error = Model.Errors.GetErrorIfTriggered();
+                    }
+
                     <div class="govuk-form-group @(error?.FormGroupClass)">
                         <partial name="_ErrorMessageNext" model="error" />
 
-                        <textarea class="govuk-textarea govuk-js-character-count @(error?.TextAreaClass)" id="text-area" name="TextBoxValue" rows="4" aria-describedby="with-hint-info">@Model.TextBoxValue</textarea>
-                        <div id="with-hint-info" class="govuk-hint govuk-character-count__message">
-                            You have 200 characters remaining
-                        </div>
+                        <textarea class="govuk-textarea govuk-js-character-count @(error?.TextAreaClass)" id="text-area" name="TextBoxValue" rows="4" aria-describedby="text-area-info">@Model.TextBoxValue</textarea>
+
+                    </div>
+                    <div id="text-area-info" class="govuk-hint govuk-character-count__message">
+                        You have 200 characters remaining
                     </div>
 
                 </div>
