Update to One Login text on Manage so in line with GOV.UK style

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/index.cshtml
@@ -28,7 +28,7 @@
         </ul>
 
         <div class="govuk-inset-text">
-            This service uses GOV.UK One Login which is managed by the Government Digital Service. You can sign in to your account, or create a One Login account, in this service.
+            This service uses GOV.UK One Login which is managed by the Government Digital Service. You will be asked to sign in or create a GOV.UK One Login.
         </div>
 
         <a asp-page="/Welcome" class="govuk-button govuk-button--start">
