--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
@@ -29,7 +29,7 @@
             @* todo: tabindex *@
             <h1 class="govuk-heading-l moj-add-another__heading" tabindex="-1">Which language is the service offered in?</h1>
             <form method="post">
-                @foreach (var (language, index) in Model.Languages.Select((item, index) => (item, index)))
+                @foreach (var (languageCode, index) in Model.LanguageCodes.Select((code, index) => (code, index)))
                 {
                     <fieldset class="govuk-fieldset moj-add-another__item">
                         <div class="govuk-form-group">
@@ -40,7 +40,7 @@
                                 @foreach (var option in Model.LanguageOptions)
                                 {
                                     <!option value="@option.Value"
-                                             @(option.Value == language ? "selected" : "")
+                                             @(option.Value == languageCode ? "selected" : "")
                                              @(option.Value == What_LanguageModel.AllLanguagesValue ? "disabled" : "")>@option.Text</!option>
                                 }
 
