--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/styles/pages/_WhatLanguage.scss
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/styles/pages/_WhatLanguage.scss
@@ -1,11 +1,10 @@
-﻿.govuk-form-group {
-    &--add-another-language {
-        .govuk-select {
-            min-width: auto;
-        }
-
-        &.govuk-form-group--error {
-            margin-bottom: 30px;
-        }
-    }
+﻿/*this just undoes the moj css for the class, but we need to do this,
+    rather than just not adding this class, as the add-another component
+    adds elements to the DOM with the class applied.
+    we need to be careful when upgrading moj, as this may change
+*/
+.moj-add-another__remove-button {
+    position: inherit !important;
+    right: auto !important;
+    top: auto !important;
 }
