--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Description.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Description.cshtml
@@ -34,9 +34,14 @@
                     }
 
                     <div class="govuk-form-group @(error?.FormGroupClass)">
-                        <partial name="_ErrorMessageNext" model="error" />
+                        @if (error != null)
+                        {
+                            <p class="govuk-error-message" id="reason-error">
+                                <span class="govuk-visually-hidden">Error:</span> @error.Message
+                            </p>
+                        }
 
-                        <textarea class="govuk-textarea govuk-js-character-count @(error?.TextAreaClass)" id="text-area" name="UserInput.Description" rows="4" aria-describedby="text-area-info">@Model.UserInput.Description</textarea>
+                        <textarea class="govuk-textarea govuk-js-character-count @(error?.TextAreaClass)" id="text-area" name="UserInput.Description" rows="4" aria-describedby="text-area-info  @(error != null ? "reason-error" : "")">@Model.UserInput.Description</textarea>
 
                     </div>
                     <div id="text-area-info" class="govuk-hint govuk-character-count__message">
