--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
@@ -43,10 +43,11 @@
                         }
                     </fieldset>
                 }
-
-                <div class="moj-button-action">
+                
+                @* moj-button-action doesn't seem to exist*@
+                @*                 <div class="moj-button-action"> *@
                     <button type="submit" name="button" value="add" class="govuk-button moj-add-another__add-button govuk-button--secondary govuk-!-margin-bottom-4" data-module="govuk-button">Add another language</button>
-                </div>
+@*                 </div> *@
 
                 <h2 class="govuk-heading-m">
                     Can you offer language support?
@@ -69,9 +70,9 @@
                         </div>
                     </fieldset>
                 </div>
-                <div class="moj-button-action">
+@*                 <div class="moj-button-action"> *@
                     <button class="govuk-button" data-module="govuk-button">Continue</button>
-                </div>
+@*                 </div> *@
             </form>
         </div>
     </div>
