--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/who-for.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/who-for.cshtml
@@ -13,18 +13,20 @@
         (int)ErrorId.Who_For__SelectToAge => "ViewModel_ToAge"
         //_ => throw new SwitchExpressionException(errorId)
     };
+
+    var selectChildrenServiceError = Model.Errors.GetErrorIfTriggered((int)ErrorId.Who_For__SelectChildrensService);
 }
 
 @section Back {
     <a href="@Model.BackUrl" class="govuk-back-link">Back</a>
 }
 
-<partial name="_ErrorSummaryNext" for="@Model.Errors" />
+<partial name="_ErrorSummaryNext" model="Model.Errors" />
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-        <fieldset class="govuk-fieldset">
+        <fieldset class="govuk-fieldset" aria-describedby="@(selectChildrenServiceError?.InputErrorMessageParaId)">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                 <h1 class="govuk-fieldset__heading">
                     Is the support offered by this service related to children or young people?
@@ -32,12 +34,14 @@
             </legend>
 
             <form method="post" novalidate>
+                <div class="govuk-form-group @(selectChildrenServiceError?.FormGroupClass)">
 
-                <div class="govuk-form-group">
+                    <partial name="_ErrorMessageNext" model="selectChildrenServiceError" />
+
                     <div class="govuk-radios" data-module="govuk-radios">
                         <div class="govuk-radios__item">
                             <input class="govuk-radios__input" asp-for="ViewModel.Children" type="radio" value="true" aria-controls="age-range" id="ViewModel_Children_Yes">
-                            <label class="govuk-label govuk-radios__label" asp-label-for="Children" for="ViewModel_Children_Yes">
+                            <label class="govuk-label govuk-radios__label" for="ViewModel_Children_Yes">
                                 Yes
                             </label>
                         </div>
@@ -58,13 +62,12 @@
 
                         <div class="govuk-radios__item">
                             <input class="govuk-radios__input" asp-for="ViewModel.Children" type="radio" value="false" id="ViewModel_Children_No">
-                            <label class="govuk-label govuk-radios__label" asp-label-for="Children" for="ViewModel_Children_No">
+                            <label class="govuk-label govuk-radios__label" for="ViewModel_Children_No">
                                 No
                             </label>
                         </div>
                     </div>
                 </div>
-
                 <button type="submit" class="govuk-button" data-module="govuk-button">
                     Continue
                 </button>
